--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- font -->
+     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;700&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
     <title>home page</title>
   </head>
   <body>
@@ -11,3 +14,9 @@
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
+
+
+
+<!-- my project -->
+
+<!-- https://www.behance.net/gallery/226240785/Healthy-Lifestyle-Store-Website?tracking_source=project_owner_other_projects -->
