Your commit message

--- a/index.html
+++ b/index.html
@@ -20,3 +20,32 @@
 <!-- my project -->
 
 <!-- https://www.behance.net/gallery/226240785/Healthy-Lifestyle-Store-Website?tracking_source=project_owner_other_projects -->
+
+
+
+
+<!-- cart -->
+
+<!-- const [cart, setCart] = useState(() => {
+  const saved = localStorage.getItem("cart");
+  return saved ? JSON.parse(saved) : [];
+});
+
+// Then in your render return JSX:
+
+return (
+  <div>
+    <h2>Your Cart</h2>
+    {cart.length === 0 ? (
+      <p>Cart is empty</p>
+    ) : (
+      <ul>
+        {cart.map((item, index) => (
+          <li key={index}>
+            {item.name} - ${item.price} {/* or whatever properties you have */}
+          </li>
+        ))}
+      </ul>
+    )}
+  </div>
+); -->
